# personal-event-mesh

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  validate-contracts.yml
fixtures/capability-report/: price-tracker.json  producer.json  scotty.json
fixtures/deal-alert/: deal-found.json
fixtures/deploy-event/: pi-success.json  vps-failure.json
fixtures/monitoring-event/: diun-image-update.json  uptime-kuma-down.json
fixtures/roadmap-event/: dispatch-completed.json
fixtures/text-event/: plain-text.json
schemas/: deal-alert.schema.json  ha-automation.schema.json  ingest-event.schema.json  monitoring-event.schema.json  roadmap-event.schema.json
schemas/monitoring-event/: uptime-kuma.schema.json
src/personal_event_mesh/: __init__.py  compat.py  registry.py  testing.py  validate.py
src/personal_event_mesh/fixtures/capability-report/: consumer.json
src/personal_event_mesh/fixtures/deploy-event/: pi-success.json  vps-failure.json
src/personal_event_mesh/fixtures/ha-automation/: hacs-update.json
src/personal_event_mesh/fixtures/monitoring-event/: backrest-pass.json  github-actions-backup-fail.json  uptime-kuma-up.json
src/personal_event_mesh/fixtures/roadmap-event/: idea-enriched.json
src/personal_event_mesh/schemas/: _meta.schema.json  capability-report.schema.json  deal-alert.schema.json  deploy-event.schema.json  monitoring-event.schema.json  roadmap-event.schema.json  text-event.schema.json
src/personal_event_mesh/schemas/monitoring-event/: backrest.schema.json  diun.schema.json
tests/: test_compat.py  test_fixtures.py  test_registry.py  test_schemas.py  test_testing.py  test_validate.py
