[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-event-mesh"
version = "0.1.0"
description = "Machine-enforced event contracts for personal homelab services"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.20.0",
    "referencing>=0.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "httpx>=0.27.0",
]
http = [
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/personal_event_mesh"]

[tool.hatch.build.targets.wheel.shared-data]
"schemas" = "personal_event_mesh/schemas"
"fixtures" = "personal_event_mesh/fixtures"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["jsonschema.*", "referencing.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
